src/objects/c2g__codaAccountingSettings__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <customSettingsVisibility>Public</customSettingsVisibility>
    <description>Accounting Settings (FF)</description>
    <fields>
        <fullName>c2g__AllocationSchedulerScopeSize__c</fullName>
        <defaultValue>200</defaultValue>
        <label>Scope size - allocation scheduler batch.</label>
        <precision>15</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>c2g__AllowDeleteAccountInUse__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Allow Deletion of Account in Use</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>c2g__AllowDeleteProductInUse__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Allow Deletion of Product in Use</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>c2g__AllowSubAnalysisFieldEdit__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Enable Edit Sub-Analysis (after posting)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>c2g__BackgroundPostingRetry__c</fullName>
        <label>Background Posting Retry</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>c2g__Chatter__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Chatter Notification</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>c2g__ConvertToCreditNoteLinesThreshold__c</fullName>
        <label>Convert To Credit Note Lines Threshold</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>c2g__CreditNoteManageLinesPreload__c</fullName>
        <label>CRN Manage Lines Preload</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>c2g__CreditNoteManageLinesSUTFieldset__c</fullName>
        <description>Custom field set name for Credit Note Manage Lines (SUT) Fieldset</description>
        <label>CRN Manage Lines (SUT) Field Set</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c2g__CreditNoteManageLinesVATFieldset__c</fullName>
        <description>Custom field set name for Credit Note Manage Lines (VAT/GST) Field Set</description>
        <label>CRN Manage Lines (VAT/GST) Field Set</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c2g__CustomPrintTemplate__c</fullName>
        <label>Custom Sales Invoice Print Template</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c2g__CustomSalesCreditNotePrintTemplate__c</fullName>
        <label>Custom Sales Credit Note Print Template</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c2g__DisableCustomPermissions__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Disable Permissions on VisualForce Pages</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>c2g__DisableSelectCompanyValidation__c</fullName>
        <label>Disable Select Company Validation</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c2g__DiscardCreditNoteLinesThreshold__c</fullName>
        <label>Discard Credit Note Lines Threshold</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>c2g__DiscardInvoiceLinesThreshold__c</fullName>
        <label>Discard Invoice Lines Threshold</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>c2g__Email__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Email Notification</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>c2g__EnableEditDimensionsafterposting__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Enable Edit Dimensions (after posting)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>c2g__EnableOverrideProductGLA__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Enable Override Product GLA</description>
        <label>Enable Override Product GLA</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>c2g__GLAFilteringInPaymentSelection__c</fullName>
        <label>GLA Filtering in Payment Selection</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c2g__GenerateBPSEmailNotifications__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Generate BPS Email Notifications</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>c2g__HeaderExpandedPayable__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Control through a button show/hide header information</description>
        <label>Header Expanded Payable</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>c2g__HideDimension1__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Hide Allocation Dimension 1</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>c2g__HideDimension2__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Hide Allocation Dimension 2</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>c2g__HideDimension3__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Hide Allocation Dimension 3</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>c2g__HideEmailButtonOnInvoice__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Hide Email Button On Invoice</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>c2g__HidePrintButtonsOnInvoice__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Hide Print Buttons On Invoice</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>c2g__InvoiceManageLinesPreload__c</fullName>
        <label>Invoice Manage Lines Preload</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>c2g__InvoiceManageLinesSUTFieldset__c</fullName>
        <description>Custom field set name for Invoice Manage Lines (SUT) Fieldset</description>
        <label>Invoice Manage Lines (SUT) Field Set</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c2g__InvoiceManageLinesVATFieldset__c</fullName>
        <description>Custom field set name for Invoice Manage Lines (VAT/GST) Field Set</description>
        <label>Invoice Manage Lines (VAT/GST) Field Set</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c2g__MaximumQueueSize__c</fullName>
        <label>Maximum Queue Size</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>c2g__NotificationObjectRecipients__c</fullName>
        <inlineHelpText>Separate email addresses using semicolons (;)  This field only applies to email and Chatter notifications. Users may not have tasks.</inlineHelpText>
        <label>Notification on objects</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>c2g__OverrideCurrencyValuesonJournalLine__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Override Currency Values on Journal Line</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>c2g__PostCreditNoteLinesThreshold__c</fullName>
        <label>Post Credit Note Lines Threshold</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>c2g__PostInvoiceLinesThreshold__c</fullName>
        <label>Post Invoice Lines Threshold</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>c2g__ProfitabilityReportId__c</fullName>
        <description>The ID of the report to be displayed on the profitability reporting widget.</description>
        <label>Profitability Report ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c2g__RetainBackgroundWorkerLogsDays__c</fullName>
        <label>Retain Background Worker Logs (Days)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>c2g__ShowDebitCreditIndicator__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Show separate fields to enter debit and credit values.</description>
        <label>Show Debit Credit Indicator</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>c2g__SplitYearEndIntoPeriods__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Split Year End into Periods</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>c2g__Task__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Task Notification</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>c2g__YearEndDetailedLoggingLevel__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Year End Detailed Logging Level</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>c2g__codaAllowDuplicateVendorDocumentNumber__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Allow Duplicate Vendor Document Number</description>
        <label>Duplicate Vendor Document Number Allowed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>c2g__codaAlternativeDraftWatermarkId__c</fullName>
        <description>The id of the alternative draft watermark image to be displayed</description>
        <label>Alternative Draft Watermark Image ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c2g__codaDisableVendorDocumentNumberCheck__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Disable Vendor Document Number Check</description>
        <label>Disable Vendor Document Number Check</label>
        <type>Checkbox</type>
    </fields>
    <label>Accounting Settings (FF)</label>
</CustomObject>